// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`comile > bindings 1`] = `
"import { watchEffect } from 'vue';
import { template, children, createTextNode, insert, setText } from 'vue/vapor';
const t0 = template(\`<div>count is <!>.</div>\`);
export function render() {
  const n0 = t0();
  const {
    0: [
      n1,
      {
        1: [n3],
      },
    ],
  } = children(root);
  const n2 = createTextNode(count.value);
  insert(n2, n1, n3);
  watchEffect(() => {
    setText(n2, undefined, count.value);
  });
  return n0;
}
"
`;

exports[`comile > directives > v-bind > simple expression 1`] = `
"import { watchEffect } from 'vue';
import { template, children, setAttr } from 'vue/vapor';
const t0 = template(\`<div></div>\`);
export function render() {
  const n0 = t0();
  const {
    0: [n1],
  } = children(root);
  watchEffect(() => {
    setAttr(n1, 'id', undefined, id.value);
  });
  return n0;
}
"
`;

exports[`comile > directives > v-html > no expression 1`] = `
"import { watchEffect } from 'vue';
import { template, children, setHtml } from 'vue/vapor';
const t0 = template(\`<div></div>\`);
export function render() {
  const n0 = t0();
  const {
    0: [n1],
  } = children(root);
  watchEffect(() => {
    setHtml(n1, undefined, '');
  });
  return n0;
}
"
`;

exports[`comile > directives > v-html > simple expression 1`] = `
"import { watchEffect } from 'vue';
import { template, children, setHtml } from 'vue/vapor';
const t0 = template(\`<div></div>\`);
export function render() {
  const n0 = t0();
  const {
    0: [n1],
  } = children(root);
  watchEffect(() => {
    setHtml(n1, undefined, code.value);
  });
  return n0;
}
"
`;

exports[`comile > directives > v-on > simple expression 1`] = `
"import { watchEffect } from 'vue';
import { template, children, on } from 'vue/vapor';
const t0 = template(\`<div></div>\`);
export function render() {
  const n0 = t0();
  const {
    0: [n1],
  } = children(root);
  watchEffect(() => {
    on(n1, 'click', handleClick);
  });
  return n0;
}
"
`;

exports[`comile > directives > v-once > as root node 1`] = `
"import { watchEffect } from 'vue';
import { template, children, setAttr } from 'vue/vapor';
const t0 = template(\`<div></div>\`);
export function render() {
  const n0 = t0();
  const {
    0: [n1],
  } = children(root);
  watchEffect(() => {
    setAttr(n1, 'id', undefined, foo);
  });
  return n0;
}
"
`;

exports[`comile > directives > v-once > basic 1`] = `
"import { template, children, createTextNode, insert, setText, setAttr } from 'vue/vapor';
const t0 = template(\`<div> <span></span></div>\`);
export function render() {
  const n0 = t0();
  const {
    0: [
      n1,
      {
        1: [n3],
      },
    ],
  } = children(root);
  const n2 = createTextNode(msg.value);
  insert(n2, n1, 0 /* InsertPosition.FIRST */);
  setText(n2, undefined, msg.value);
  setAttr(n3, 'class', undefined, clz.value);
  return n0;
}
"
`;

exports[`comile > directives > v-text > no expression 1`] = `
"import { watchEffect } from 'vue';
import { template, children, setText } from 'vue/vapor';
const t0 = template(\`<div></div>\`);
export function render() {
  const n0 = t0();
  const {
    0: [n1],
  } = children(root);
  watchEffect(() => {
    setText(n1, undefined, '');
  });
  return n0;
}
"
`;

exports[`comile > directives > v-text > simple expression 1`] = `
"import { watchEffect } from 'vue';
import { template, children, setText } from 'vue/vapor';
const t0 = template(\`<div></div>\`);
export function render() {
  const n0 = t0();
  const {
    0: [n1],
  } = children(root);
  watchEffect(() => {
    setText(n1, undefined, str.value);
  });
  return n0;
}
"
`;

exports[`comile > fragment 1`] = `
"import { template } from 'vue/vapor';
const t0 = template(\`<p></p><span></span><div></div>\`);
export function render() {
  const n0 = t0();
  return n0;
}
"
`;

exports[`comile > static + dynamic root 1`] = `
"import { watchEffect } from 'vue';
import { template, createTextNode, insert, setText } from 'vue/vapor';
const t0 = template(\`2\`);
export function render() {
  const n0 = t0();
  const n1 = createTextNode(1);
  insert(n1, n0, 0 /* InsertPosition.FIRST */);
  const n2 = createTextNode(3);
  insert(n2, n0);
  watchEffect(() => {
    setText(n1, undefined, 1);
  });
  watchEffect(() => {
    setText(n2, undefined, 3);
  });
  return n0;
}
"
`;

exports[`comile > static template 1`] = `
"import { template } from 'vue/vapor';
const t0 = template(\`<div><p>hello</p><input><span></span></div>\`);
export function render() {
  const n0 = t0();
  return n0;
}
"
`;
